project_fl-a/test/parser/bad/a_bad_global.py
# RUN: %chocopy-llvm %s 2>&1 | FileCheck %s.err

x:int = 0
def foo():
    global x
    return "OK"
global x
